--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A API for university restaurant",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc", 
-    "start" : "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,17 @@
   },
   "homepage": "https://github.com/AlmiranteFuchs/RUAPI#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
 }
